# OCRWebServer

./: CMakeLists.txt  README.md
ReactorHttp-Cpp/: Buffer.cpp  Buffer.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  main.cpp
benchmark/: benchmark.cpp
images/: 1.jpg-result.txt  id_card.jpeg-result.txt
include/: OcrLite.h  PredString.h  getopt.h
opencv-static/linux/include/opencv4/opencv2/: cvconfig.h
opencv-static/linux/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: OcrLite.cpp  OcrUtils.cpp  PredString.cpp  getopt.cpp
